fix: change dark mode text color override in CSS because old one doesnt work right

--- a/extension_list_view/styles.css
+++ b/extension_list_view/styles.css
@@ -21,11 +21,8 @@
     --spec-text-primary: #000;
 }
 
-/* Dark Mode Override */
-@media (prefers-color-scheme: dark) {
-    :root {
-        --spec-text-primary: #fff;
-    }
+html[dark] {
+    --spec-text-primary: #fff;
 }
 
 /* ==========================================================================
